Js logic completed

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -20,7 +20,7 @@
       <div class="wrapper">
         <div class="advice-box">
           <p class="advice-box__header">ADVICE #117</p>
-          <p class="advice-box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa consectetur repellendus illo, molestias labore beatae.</p>
+          <p class="advice-box__text"></p>
           
             <img class="advice-box__img" src="images/pattern-divider-mobile.svg" alt="">
         
@@ -31,6 +31,6 @@
     </section>
   </main>
 
- 
+ <script src="script.js"></script>
 </body>
 </html>
